force-app/main/default/objects/sumoapp__RegistrationLink__c/sumoapp__RegistrationLink__c.object-meta.xml
<CustomObject>
    <label>SUMO Event Link</label>
    <nameField>
        <label>SUMO Event Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Event Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>