force-app/main/default/objects/sumoapp__RegistrationLink__c/fields/sumoapp__EventIds__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventIds__c</fullName>
    <label>Event Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>