force-app/main/default/objects/sumoapp__RegistrationLink__c/fields/sumoapp__Process__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process</label>
    <referenceTo>sumoapp__Process__c</referenceTo>
    <relationshipLabel>Process Registration Links</relationshipLabel>
    <relationshipName>ProcessRegistrationLinks</relationshipName>
    <type>Lookup</type>
</CustomField>