force-app/main/default/objects/sumoapp__RegistrationLink__c/fields/sumoapp__RegistrationLink__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RegistrationLink__c</fullName>
    <label>SUMO Event Link</label>
    <type>TextArea</type>
</CustomField>