force-app/main/default/objects/sumoapp__RegistrationLink__c/fields/sumoapp__WhereCondition__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhereCondition__c</fullName>
    <label>Where Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>