force-app/main/default/objects/sumoapp__RegistrationLink__c/listViews/allSelection_RegistrationLink.listView-meta.xml
<ListView>
    <fullName>allSelection_RegistrationLink</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>