force-app/main/default/objects/sumoapp__RegistrationLink__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Type__c</columns>
    <columns>sumoapp__RegistrationLink__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>