force-app/main/default/objects/sumoapp__RegistrationLink__c/listViews/sumoapp__AllStaticEventLinks.listView-meta.xml
<ListView>
    <fullName>sumoapp__AllStaticEventLinks</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Type__c</columns>
    <columns>sumoapp__RegistrationLink__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sumoapp__Type__c</field>
        <operation>equals</operation>
        <value>Static</value>
    </filters>
    <label>All Static Event Links</label>
</ListView>