force-app/main/default/objects/sumoapp__RegistrationLink__c/listViews/sumoapp__MyEventLinks.listView-meta.xml
<ListView>
    <fullName>sumoapp__MyEventLinks</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Type__c</columns>
    <columns>sumoapp__RegistrationLink__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Event Links</label>
</ListView>